--- a/html/project/my.html
+++ b/html/project/my.html
@@ -21,6 +21,8 @@
     <script src="http://lingling.com/static/layui/layui.js"></script>
     <script type="text/html" id="barDemo">
         <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
+        <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
     </script>
     <script type="text/javascript">
         layui.config({
@@ -41,7 +43,7 @@
             table.render({
                 id: 'row'
                 ,elem: '#table'
-                ,url: 'http://lingling.com/backstage/project/listProject'
+                ,url: 'http://lingling.com/backstage/project/myProject'
                 ,method: 'post'
                 ,contentType: 'application/json'
                 ,page: true
@@ -63,7 +65,7 @@
                     ,{field:'priority', title: '项目级别'}
                     ,{field:'client_name', title: '客户名称'}
                     ,{field:'collection_status', title: '收款状态'}
-                    ,{fixed:'right', width:80, align:'center', toolbar:'#barDemo', title: '操作'}
+                    ,{fixed:'right', width:178, align:'center', toolbar:'#barDemo', title: '操作'}
                 ]]
             });
 
